@startuml
'https://plantuml.com/class-diagram

openjfx.org.Application <|-- InventoryTracker
InventoryTracker -- GuiManager

GuiManager o-- InventoryList

GuiManager o-- FileManager
InventoryList *-- Item

class InventoryTracker {
    start()
    main()
}

class GuiManager {
    inventory: InventoryList
    scenes: GuiManager
    fileManager: FileManager

    +GuiController(InventoryList, GuiManager)\n

    addItemAction(EventHandler)
    editItemAction(EventHandler)
    removeItemAction(EventHandler)
    saveInventoryAction(EventHandler)\n

    addItem(name: String, serial: String, value: Double)
    editItem()
    removeItem()\n

    saveInventoryTSV(fileName String)
    saveInventoryHTML(fileName String)
    saveInventoryJSON(fileName String)
}

class FileManager {
    exportFile (fileName String, data String)
    importFile (fileName String)
}

class InventoryList {
    ObservableList<Item>
    createItem()
    checkSerial()
    checkValue()
    addItem()
    deleteItem()
    clearList()
    sortList()
    editItemName()
    editSerialNumber()
    editItemValue()
    exportListJSON()
    exportListTCV()
    exportListHTML()
    importList()
    tcvImport()
}

class Item {
    double value
    string serialNumber
    string name

    editValue(newValue Double)
    editSerialNumber(newSerial String)
    editName(newName String)

    getName()
    getSerialNumber()
    getValue()
}

@enduml